=====================================
2009-07-24T04:37:05.604140Z ptl-1_020
=====================================

  2009-07-24 04:33:31 (r2597) by rcaputo
  poe-test-loops/lib/POE/Test/Loops.pm M

    New version for a new release.

  2009-07-22 20:24:33 (r2596) by rcaputo
  poe-test-loops/lib/POE/Test/Loops/z_kogman_sig_order.pm M

    Plan for a specific test count. Sometimes the no_plan end-run plan
    doesn't get output, breaking the test despite all subtests passing. 

  2009-07-21 02:22:58 (r2586) by rcaputo
  poe-test-loops/lib/POE/Test/Loops/z_rt39872_sigchld_stop.pm M

    Conditionally call has_forked() if it's available. Should prevent
    issues where the tests are released before the feature. Also, moved
    has_forked() earlier because it was called too early for new
    PID-change checks contributed by Philip Gwyn. 

  2009-07-20 08:40:10 (r2583) by rcaputo
  poe-test-loops/lib/POE/Test/Loops/z_rt39872_sigchld_stop.pm M

    Add a bit of debugging. Add a delay before POE is loaded, in case the
    race is between the test framework's Tk detection and POE
    initializing Tk at start time. To avoid unnecessary delays, make them
    dependent on Tk being loaded. 

  2009-07-20 07:34:01 (r2582) by rcaputo
  poe-test-loops/lib/POE/Test/Loops/z_rt39872_sigchld_stop.pm M

    This test causes Tk or X to throw an error if it's run too soon after
    the previous test. Add a 2sec delay before the test to give the GUI
    time to settle down. 

  2009-07-20 06:19:54 (r2580) by rcaputo
  poe-test-loops/MANIFEST M;
  poe-test-loops/lib/POE/Test/Loops/z_rt39872_sigchld.pm A;
  poe-test-loops/lib/POE/Test/Loops/z_rt39872_sigchld_stop.pm A;
  poe-test-loops/lib/POE/Test/Loops/z_merijn_sigchld_system.pm A;
  poe-test-loops/lib/POE/Test/Loops.pm M;
  poe-test-loops/lib/POE/Test/Loops/z_steinert_signal_integrity.pm A;
  poe-test-loops/lib/POE/Test/Loops/z_kogman_sig_order.pm A

    Promote some of the signal-related regression tests into the event